src/mainstyles.css
/* 기본 스타일 */
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');

.App {
  font-family: "Inconsolata", monospace;
  font-optical-sizing: auto;
  background: #8293B7;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 20px;
  box-sizing: border-box;
  color: #fff;
}

/* 메인화면 */
.user-wrap {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.user-wrap:hover .main-logo img {
  transition: opacity ease 0.3s;
  opacity: 0.5;
  transition: transform ease 0.3s;
  transform: scale(1.2);
}

.main-logo {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.main-logo > img {
  width: 80%;
  height: auto;
  transition: opacity 0.3s ease;
}

.main-logo p {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-size: 8rem;
  text-shadow: 2px 2px 4px rgba(0, 0, 74, 0.5);
  margin: 0;
  pointer-events: none; /* Prevents the text from interfering with hover events */
  text-align: center;
  white-space: nowrap;
}



/* 홈화면 */
.home {
  display: flex;
}

.home-container {
  display: flex;
  flex: 1;
  overflow:hidden;
}

.home-sidebar {
  width: 500px;
  transition: width 0.3s;
}

.home-hometutorial {
  flex: 1;
  overflow-y: auto;
}


/* 사이드바 */
.sidebar {
  position: fixed;
  top: 135px; 
  left: 0; 
  width: 500px;
  padding: 0 20px;
}

.sidebar ul {
  list-style-type: none;
  padding: 0;
}

.sidebar ul li {
  cursor: pointer;
  font-size: 25px;
  margin-bottom: 20px;
  text-decoration: none; 
  color: white; 
  transition: color 0.5s ease;
  
}


/* 홈화면 가운데부분 정렬*/
.home-tutorial {
  position: grid;
  margin-top: 100px;
  top: 136px; 
  left: 1000px; 
  width: calc(100%); 
  height: calc(100vh - 100px); 
  overflow-y: auto;
  padding: 20px 20px;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.tutorial-function {
  
  margin-top: 10px;
  
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
 
  padding: 20px 10px;
  
}

.tutorial-text{
  width: 120%;
}

.tutorial-img {
  width: 140%;
}


/* 화면 넓이 줄어들 때 */
@media (max-width: 800px) {
  .home-sidebar {
    width: 200px;
  }

  .sidebar {
    width: 200px;
  }

  .hide-on-small {
    display: none;
  }

  .home-hometutorial {
    padding: 10px;
  }

  .tutorial-text {
    width: 180%;
  }

}



.sidebar ul li:hover {
  color: rgb(0, 0, 74, 0.5); 
}



.home-tutorial::-webkit-scrollbar {
  display: none;
}

.img-container {
  position: relative;
  width: 80%;
  height: auto;
  margin: 0 auto;
  background-color: #000;
}

.main-image {
  width: 100%;
  height: auto;
  position: relative;
  z-index: 0;
}

.img-text {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex; /* Use flexbox to center the text */
  justify-content: center;
  align-items: center;
  color: white;
  background-color: rgba(38, 38, 38, 0.5); /* Semi-transparent background */
  font-size: 36px;
  text-align: center;
  padding: 10px;
  box-sizing: border-box;
  z-index: 1;
}

.img-wrapper {
  position: relative;
  width: 100%;
  height: auto;
  aspect-ratio: 16/9;
  overflow: hidden; /* Prevents any content from overflowing outside the wrapper */
}

/* Both images will now stack on top of each other */
.img-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  position: absolute; /* Stack the images inside the wrapper */
  top: 0;
  left: 0;
  transition: opacity 0.3s ease;
}

.edit-image {
  opacity: 0;
  z-index: 1;
}

.default-image {
  opacity: 1;
  z-index: 0;
}


.img-wrapper:hover .edit-image {
  opacity: 1;
}

.img-wrapper:hover .default-image {
  opacity: 1;
}


.desc-text {
  margin-top: 0.5rem;
  margin-bottom: 14rem;
  font-size: 24px;
}

.tutorial-function {
  position: relative;
  align-self: center;
  width:60%;
}

.function-text {
  position: inherit;
  
  font-size: 24px;
}

.tutorial-text {
  font-size: 20px;
}

.start-button {
  display: inline-block;
  margin-bottom: 100px;
}

.send {
  left: 500px;
}

.home-header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: linear-gradient(to bottom, #eaeaea,#98A6C4, #5E74A3);
  border-bottom:1px solid #5E74A3;
  color: white;
}

.home-header > h1{
  padding-top: 10px;
  font-size: 50px;
}

.home-button {
  position: absolute;
  top: 16px;
  right: 10px;
}

.vl {
  border-left: 6px solid #5E74A3;
  height: 500px;
  position: absolute;
  left: 50%;
  margin-left: -3px;
  top: 0;
}


/* 버튼 관련 */
.button {
  width: auto;
  height: 40px;
  border-radius: 45px;
  border: 1px solid black;
  color: black;
  background: linear-gradient(to bottom, #eaeaea, #a8a2a2);
  font-size: 25px;
  transition: box-shadow 0.2s;
}

.button:hover {
  box-shadow: 0px 4px 8px rgba(0, 0, 74, 0.248);
}

/* 입력창에 입력안했을 때 상태 */
.button:disabled {
  opacity: 0.3; 
  pointer-events: none;
}

/* 입력창 헤더(Reset버튼)부분 */
.chat-header{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding-top: 18px;
  padding-right: 10px;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

/* 채팅창 */

.image-upload {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.image-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.uploadImage {
  width: 350px;
  height: 300px;
  border-radius: 17px;
  transition: 0.3s;
  margin-bottom: 20px;
}

.uploadImage:hover {
  box-shadow: 0px 4px 8px rgba(0, 0, 74, 0.248);
  border: 1px solid rgb(0, 0, 74, 0.5); 
}

.button-container {
  display: flex;
  gap: 10px; /* 버튼 사이 간격 */
}

.chat-container {
  position: fixed;
  top: 70px;
  bottom: 100px;
  width: 100%;
  overflow-y: scroll;
  scroll-behavior: smooth;
  height: auto;
}

.chat-container::-webkit-scrollbar {
  display: none;
}

.message-container {
  margin: 0 0.5rem 1rem 0.5rem;
  padding: 1.5rem;
  font-size: 25px;
  display: flex;
  flex-direction: column; 
  text-align: justify;
  min-height: fit-content; 
}

.message-img-container > img {
  width: 30%;
  margin-right: 30px;
}

.message-container > div {
  word-wrap: break-word;
}

.user, .bot {
  border: 1px solid black;
  background: #eaeaea;
}

.user {
  border-radius: 2rem 0rem 2rem 2rem;
  background: linear-gradient(to left, #eaeaea, #a8a2a2);
}

.bot {
  border-radius: 0rem 2rem 2rem 2rem;
  background: linear-gradient(to right, #eaeaea, #a8a2a2);
}

.message-img-container {
  display: flex;
  align-items: flex-end;
  position: relative; 
}

.message-img-container img {
  max-width: 100%;
  height: auto;
  border: 1px solid #ccc;
  padding: 5px;
  background-color: #fff;
}

.message-img-container > button{
  position: relative;
  bottom: 5px;
  right: 0;
  margin-left: 5px;
}

/* 하단 입력창 */
.main-bottom{
  position: fixed;
  bottom: 5px;
  left: 50%;
  transform: translateX(-50%);
  width: 95%;
  padding: 0 5px;
}

.input-container{
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: #D9D9D9;
  border-radius: 2rem;
  padding: 5px;
  border: 1px solid black;
  width: 100%;
  height: 100%;
}

.input-container input[type="text"] {
  flex: 1;
  border: none;
  outline: none;
  font-size: 25px;
  color: #111111;
  background: transparent;
  border: none;
  margin-left: 8px;
}

.main-bottom > p {
  position: relative;
  margin-bottom: 0;
  /* font-size: 2vw; */
  font-size: 25px;
  padding: 0 10px;
  color: white;
}

